# world-cup-qatar-elt-bigquery-sqlmesh

./: .gitignore  README.md  config.yaml  pyproject.toml  team_players_stat_raw.py
bq/: build_player_stats_bigquery.sql  team_players_stat_bigquery.sql
macros/: build_player_stats.py  build_player_stats.sql
models/marts/: team_players_stat.sql  team_players_stat_duckdb.sql  team_players_stat_python.py
models/staging/: team_fifa_ranking_seed.sql  team_players_stat_raw_cleaned.sql  team_players_stat_raw_cleaned_duckdb.sql  team_stats_raw_seed.sql
seeds/: team_fifa_ranking.csv  team_players_stat_raw.csv
sqlmesh_ui/: Dockerfile  pyproject.toml
world_cup_qatar_elt_sqlmesh_dag/: world_cup_qatar_elt_sqlmesh_dag.py
